--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^8.0.1"
   },
   "dependencies": {
+    "@eluvio/elv-wallet-frame-client": "^2.0.6",
     "apollo-server-express": "^3.12.0",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
